--- a/src/main/resources/io/github/anybuddy9001/dartstrainingsspiel/FXML/Settings.fxml
+++ b/src/main/resources/io/github/anybuddy9001/dartstrainingsspiel/FXML/Settings.fxml
@@ -12,7 +12,7 @@
             <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#save"
                     text="%settingsWindow.button.save" textAlignment="CENTER"/>
             <Button alignment="CENTER" cancelButton="true" mnemonicParsing="false" onAction="#closeWindow"
-                    text="%settingsWindow.button.close" textAlignment="CENTER"/>
+                    text="%cmn.button.close" textAlignment="CENTER"/>
         </buttons>
     </ButtonBar>
     <VBox alignment="CENTER" fillWidth="false" prefHeight="261.0" prefWidth="400.0" spacing="15.0">
@@ -42,7 +42,7 @@
             </CheckBox>
         </VBox>
         <HBox alignment="CENTER">
-            <Text fill="WHITE" text="%launcherWindow.text.duration" textAlignment="RIGHT">
+            <Text fill="WHITE" text="%cmn.text.duration" textAlignment="RIGHT">
                 <font>
                     <Font size="19.0"/>
                 </font>
@@ -69,14 +69,14 @@
             </Text>
         </HBox>
         <CheckBox fx:id="showLogOnStartup" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0"
-                  mnemonicParsing="false" selected="true" text="%settings.window.checkBox.showLog" textFill="WHITE">
+                  mnemonicParsing="false" selected="true" text="%settingsWindow.checkBox.showLog" textFill="WHITE">
             <font>
                 <Font size="17.0"/>
             </font>
         </CheckBox>
         <HBox alignment="CENTER" spacing="20.0">
             <MenuButton alignment="CENTER" focusTraversable="false" mnemonicParsing="false" prefHeight="30.0"
-                        prefWidth="175.0" text="%launcherWindow.text.languageSelection">
+                        prefWidth="175.0" text="%cmn.text.languageSelection">
                 <items>
                     <MenuItem mnemonicParsing="false" onAction="#setLanguageGerman" text="Deutsch"/>
                     <MenuItem mnemonicParsing="false" onAction="#setLanguageEnglish" text="English"/>
